--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,15 @@
-# database init, supports mysql too
-database=hsqldb
-spring.datasource.schema=classpath*:db/${database}/schema.sql
-spring.datasource.data=classpath*:db/${database}/data.sql
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
+bascula.datasource.jdbc-url=jdbc:postgresql://192.168.1.26:5432/industria_bas
+bascula.datasource.username= postgres
+bascula.datasource.password=123456789
 
-# JPA
-spring.jpa.hibernate.ddl-auto=none
-
-# Internationalization
-spring.messages.basename=messages/messages
-
-# Actuator / Management
-management.endpoints.web.base-path=/manage
-management.endpoints.web.exposure.include=*
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
 
 # Logging
-logging.level.org.springframework=INFO
+logging.level.org.springframework=DEBUG
 # logging.level.org.springframework.web=DEBUG
 # logging.level.org.springframework.context.annotation=TRACE
 
